--- a/html/contact.html
+++ b/html/contact.html
@@ -3,7 +3,7 @@
   <head>
     <meta http-equiv="Content-Type" content="text/html; charset=UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1">
-    <link rel="stylesheet" href="css/main.css" type="text/css">
+    <link rel="stylesheet" href="css/proto.css" type="text/css">
     <link rel="stylesheet" href="css/contact.css" type="text/css">
     <title>Akreev - Contact</title>
   </head>
@@ -103,7 +103,7 @@
                           style=" padding-top: px;
                           padding-bottom: px;
                           ">
-                          <div class="button-container" style="">
+                          <div class="button-container">
                             <a href="https://www.freepik.com/author/dmitryakreev/collections" target="_blank"
                             class="button-module preserve-whitespace--nowrap">Me on Freepik</a>
                           </div>
