--- a/html/single.html
+++ b/html/single.html
@@ -3,7 +3,7 @@
   <head>
     <meta http-equiv="Content-Type" content="text/html; charset=UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1">
-    <link rel="stylesheet" href="css/main.css" type="text/css">
+    <link rel="stylesheet" href="css/proto.css" type="text/css">
     <link rel="stylesheet" href="css/single.css" type="text/css">
     <title>Akreev - White unbranded phone mockups with customizable design</title>
   </head>
